# Maya-uiMaster

./: .pre-commit-config.yaml  README.md  parse.py  pyproject.toml  uiMaster.py  uiMaster_source.py
src/: parse.py
uiMaster/: install.mel  uiMaster.mod
uiMaster/plug-ins/: uiMaster.py
uiMaster/scripts/: userSetup.py
