[tool.poetry]
name = "maya-uimaster"
version = "0.1.0"
description = ""
authors = ["timmyliang <820472580@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.16.0"
tag_format = "v$version"

[tool.black]
line-length = 88
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | uiMaster_source.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src", "test"]
filter_files = true
known_first_party = "src"
# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"
force_sort_within_sections = true
force_single_line = true
# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python2.7,echo
isolated_build = True
skipsdist = true

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest

[testenv:echo]
deps =
commands = python -c "print(123)"

"""

[tool.flake8]
max-line-length=88
